<resources>
    <string name="app_name">FeriaPUCP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitar_informaci_n_por_whatsapp">Solicitar información por WhatsApp:</string>
    <string name="_942977934">942977934</string>
    <string name="perfume_cherry">Perfume Cherry</string>
    <string name="_15_00">$ 15.00</string>
    <string name="un_perfume_para_el_hombre_poderoso_como_las_olas_que_embisten_las_rocas_refrescante_como_el_agua_de_un_mar_infinito_sin_l_mites_como_el_hombre_que_no_reh_ye_los_riesgos_10_ml_e_0_3_fl_oz">Un perfume para el hombre poderoso como las olas que embisten las rocas, refrescante como el agua de un mar infinito, sin límites como el hombre que no rehúye los riesgos. 10 ml e 0.3 fl.oz.</string>
    <string name="marca">Marca:</string>
    <string name="bambu">Bambu</string>
    <string name="categor_a">Categoría:</string>
    <string name="perfume">Perfume</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="hola_allison">Hola, Allison!</string>
    <string name="encuentra_el_producto_ideal_para_ti">Encuentra el producto ideal para ti</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="feria_del_pollito">Feria del pollito</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="cliente">Cliente</string>
    <string name="vendedor">Vendedor</string>
    <string name="feria_del_pollito">Feria del pollito</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="numero_de_celular">Numero de celular</string>
    <string name="contrase_a">Contraseña</string>
    <string name="marca_o_nombre_de_usuario">Marca o Nombre de usuario</string>
    <string name="foto_del_producto">Foto del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">GUARDAR</string>
    <string name="registro_del_producto">Registro del producto</string>
    <string name="catergoria">Catergoria</string>
    <string name="nombre_de_la_foto">Nombre de la foto</string>
    <string name="precio">Precio</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="vendedor">Vendedor</string>
    <string name="bambu">Bambu</string>
    <string name="perfume_cherry">Perfume Cherry</string>
    <string name="_15_00">$ 15.00</string>
    <string name="tipo">Tipo</string>
    <string name="perfume">Perfume</string>
    <string name="precio">Precio</string>
    <string name="todo">TODO</string>
</resources>