<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feriabg4"
    tools:context=".Autenticacion.Registro">

    <TextView
        android:id="@+id/btnCambioIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="CambiarAIniciarSesion"
        android:text="@string/ya_tienes_una_cuenta_inicia_sesi_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrarse"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrarse"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarse"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:onClick="Registrarse"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/eContrasenhaRegis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eContrasenhaRegis"
        app:layout_constraintTop_toBottomOf="@+id/eContrasenhaRegis"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/marca_o_nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eContrasenhaRegis"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="192dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/eCorreoRegis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eCorreoRegis"
        app:layout_constraintTop_toBottomOf="@+id/eCorreoRegis"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/eCorreoRegis"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/eNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eNombre"
        app:layout_constraintTop_toBottomOf="@+id/eNombre"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="371dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/pattaya"
        android:gravity="center"
        android:text="@string/feria_del_pollito"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <RadioGroup
        android:id="@+id/idRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarse"
        app:layout_constraintEnd_toEndOf="@+id/idNumero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idNumero">

        <RadioButton
            android:id="@+id/idVendedor"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/vendedor" />

        <RadioButton
            android:id="@+id/idCliente"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/cliente" />

    </RadioGroup>

    <EditText
        android:id="@+id/idNumero"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_de_celular"
        android:inputType="number|textPersonName"
        android:phoneNumber="true"
        app:layout_constraintBottom_toTopOf="@+id/idRol"
        app:layout_constraintEnd_toEndOf="@+id/eContrasenhaRegis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eContrasenhaRegis"
        app:layout_constraintTop_toBottomOf="@+id/eContrasenhaRegis"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>