<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/fondo"
tools:context=".Roles.VendedorActivity">


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/foto_del_producto"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idPrecio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idPrecio"
        app:layout_constraintTop_toBottomOf="@+id/idPrecio" />

    <EditText
        android:id="@+id/idNomProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombre_del_producto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:autofillHints="" />

    <EditText
        android:id="@+id/idDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descripcion"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idCategoria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idCategoria"
        app:layout_constraintTop_toBottomOf="@+id/idCategoria" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/precio"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idDescripcion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/idDescripcion" />

    <EditText
        android:id="@+id/idPrecio"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        android:autofillHints="" />


    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/idNamePhoto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idNamePhoto"
        app:layout_constraintTop_toBottomOf="@+id/idNamePhoto"
        app:layout_constraintVertical_bias="0.34"
        tools:srcCompat="@drawable/ic_action_imageupload"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:text="@string/registro_del_producto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_action_uploadd"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/btnSubir"
        app:layout_constraintEnd_toEndOf="@+id/btnSubir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSubir"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/add_storage"
        app:layout_constraintEnd_toEndOf="@+id/add_storage"
        app:layout_constraintStart_toStartOf="@+id/add_storage"
        app:srcCompat="@drawable/ic_action_imageuploadd"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/add_image"
        app:layout_constraintEnd_toEndOf="@+id/add_image"
        app:layout_constraintStart_toStartOf="@+id/add_image"
        app:srcCompat="@drawable/ic_action_cam"
        android:contentDescription="@string/todo"
        android:focusable="true" />

    <Button
        android:id="@+id/btnSubir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="48dp"
        android:onClick="uploadImageToFirebase"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idNamePhoto"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nombre_de_la_foto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        android:autofillHints="" />

    <EditText
        android:id="@+id/idCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/catergoria"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idNomProd"
        app:layout_constraintStart_toStartOf="@+id/idNomProd"
        app:layout_constraintTop_toBottomOf="@+id/idNomProd"
        android:autofillHints="" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="139dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="@+id/selectedImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selectedImage"
        app:layout_constraintTop_toBottomOf="@+id/selectedImage" />


</androidx.constraintlayout.widget.ConstraintLayout>